# uni-os

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  format.yml
cw/: ProcessInfo.h  Processes.cpp  Processes.h  main.cpp
lab01/: README.md  db.csv  list.c  list.h  main.c
lab02/: README.md  main.c
lab03/: README.md  main.c  script.sh
lab04/: README.md  main.c
lab05/: README.md  list.h  main.c
lab06/: README.md  main.c  script.sh
lab07/: README.md  main.c
lab08/: README.md  threads-posix.c  threads-std.cpp
lab09/: README.md  main.c
lab10/: README.md  atomic.cpp  main.c  threads-posix.c  threads-std.cpp
lab11/: README.md  main.c
lab12/: README.md
lab13/: README.md
